# claude-usage-monitor

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: App.tsx  fonts.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aggregate.rs  alerts.rs  commands.rs  creds.rs  ingest.rs  lib.rs  main.rs  official.rs  pricing.rs  store.rs  tray.rs  types.rs
src/components/: Chart.tsx  Gauge.tsx  ui.tsx
src/lib/: format.ts  ipc.ts
src/pages/: Breakdown.tsx  Dashboard.tsx  History.tsx  Log.tsx  Settings.tsx
