[package]
name = "claude-limit"
version = "0.1.0"
description = "Claude 额度监控 — 实时监听 Claude 订阅版额度与用量"
authors = ["fengdiqing <fengdiqing8@gmail.com>"]
license = "MIT"
repository = "https://github.com/xuanhuazi/claude-usage-monitor"
edition = "2021"
rust-version = "1.88"

[lib]
# The `_lib` suffix avoids a name clash with the bin target on Windows.
name = "claude_limit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }

[profile.release]
opt-level = "s"
strip = true
# (fat LTO + codegen-units=1 give a slightly smaller binary but a much slower
# build; left at defaults for practical build times.)
